Introduce own modifications

--- a/packages/create-react-app/package.json
+++ b/packages/create-react-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "create-react-app",
+  "name": "crapp",
   "version": "3.2.0",
   "keywords": [
     "react"
@@ -7,7 +7,7 @@
   "description": "Create React apps with no build configuration.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/facebook/create-react-app.git",
+    "url": "https://github.com/michalpopek/crapp.git",
     "directory": "packages/create-react-app"
   },
   "license": "MIT",
@@ -15,7 +15,7 @@
     "node": ">=8"
   },
   "bugs": {
-    "url": "https://github.com/facebook/create-react-app/issues"
+    "url": "https://github.com/michalpopek/crapp/issues"
   },
   "files": [
     "index.js",
@@ -23,7 +23,8 @@
     "yarn.lock.cached"
   ],
   "bin": {
-    "create-react-app": "./index.js"
+    "create-react-app": "./index.js",
+    "crapp": "./index.js"
   },
   "dependencies": {
     "chalk": "2.4.2",
