--- a/packages/eslint-config-crapp/package.json
+++ b/packages/eslint-config-crapp/package.json
@@ -18,9 +18,7 @@
     "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-simple-import-sort": "^4.0.0",
-    "prettier": "^1.18.2"
-  },
-  "peerDependencies": {
+    "prettier": "^1.18.2",
     "eslint-config-react-app": "^5.0.2"
   }
 }
