--- a/packages/babel-preset-cramp/package.json
+++ b/packages/babel-preset-cramp/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "babel-preset-crapp",
+  "name": "babel-preset-cramp",
   "version": "0.1.0",
-  "description": "Babel preset used by CRApp)",
+  "description": "Babel preset used by Cramp",
   "repository": {
     "type": "git",
-    "url": "https://github.com/michalpopek/crapp.git",
-    "directory": "packages/babel-preset-crapp"
+    "url": "https://github.com/michalpopek/cramp.git",
+    "directory": "packages/babel-preset-cramp"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/michalpopek/crapp/issues"
+    "url": "https://github.com/michalpopek/cramp/issues"
   },
   "files": [
     "index.js"
