--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "crapp-scripts",
+  "name": "cramp-scripts",
   "version": "0.1.0",
-  "description": "Configuration and scripts for CRApp.",
+  "description": "Configuration and scripts for Cramp.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/michalpopek/crapp.git",
+    "url": "https://github.com/michalpopek/cramp.git",
     "directory": "packages/react-scripts"
   },
   "license": "MIT",
@@ -12,7 +12,7 @@
     "node": ">=8.10"
   },
   "bugs": {
-    "url": "https://github.com/michalpopek/crapp/issues"
+    "url": "https://github.com/michalpopek/cramp/issues"
   },
   "files": [
     "bin",
@@ -24,8 +24,7 @@
     "utils"
   ],
   "bin": {
-    "react-scripts": "./bin/react-scripts.js",
-    "crapp-scripts": "./bin/react-scripts.js"
+    "cramp-scripts": "./bin/react-scripts.js"
   },
   "types": "./lib/react-app.d.ts",
   "dependencies": {
@@ -37,7 +36,7 @@
     "babel-jest": "^24.9.0",
     "babel-loader": "8.0.6",
     "babel-plugin-named-asset-import": "^0.3.4",
-    "babel-preset-crapp": "0.1.0",
+    "babel-preset-cramp": "0.1.0",
     "babel-preset-react-app": "^9.0.2",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
@@ -45,7 +44,7 @@
     "dotenv": "6.2.0",
     "dotenv-expand": "5.1.0",
     "eslint": "^6.1.0",
-    "eslint-config-crapp": "0.1.0",
+    "eslint-config-cramp": "0.1.0",
     "eslint-config-react-app": "^5.0.2",
     "eslint-loader": "3.0.2",
     "eslint-plugin-flowtype": "3.13.0",
