--- a/packages/eslint-config-cramp/package.json
+++ b/packages/eslint-config-cramp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-cramp",
-  "version": "0.1.0",
+  "version": "0.1.1-beta.0",
   "description": "ESLint config used by Cramp",
   "repository": {
     "type": "git",
@@ -16,9 +16,9 @@
   ],
   "dependencies": {
     "eslint-config-prettier": "^6.3.0",
+    "eslint-config-react-app": "^5.0.2",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-simple-import-sort": "^4.0.0",
-    "prettier": "^1.18.2",
-    "eslint-config-react-app": "^5.0.2"
+    "prettier": "^1.18.2"
   }
 }
