--- a/packages/babel-preset-cramp/package.json
+++ b/packages/babel-preset-cramp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babel-preset-cramp",
-  "version": "0.1.1-beta.0",
+  "version": "0.1.1",
   "description": "Babel preset used by Cramp",
   "repository": {
     "type": "git",
