Provide own base modifications
Squashed commit of the following:

commit 26200d74e594f43eb4b60c1179ffd17cb2ae4d20
Author: Michał Popek <michal@popek.co>
Date:   Sat Oct 19 17:56:53 2019 +0200

    Publish

     - babel-preset-cramp@0.1.1
     - cramp@0.1.1
     - eslint-config-cramp@0.1.1
     - cramp-scripts@0.1.1

commit c75569e5d6a3ab0d15063c57c7a87004bda55d94
Author: Michał Popek <michal@popek.co>
Date:   Sat Oct 19 17:55:38 2019 +0200

    Prepare release

commit 8ff0c8bfda786bb92a082c82918cc30221aca538
Author: Michał Popek <michal@popek.co>
Date:   Sat Oct 19 17:51:59 2019 +0200

    Modify template README

commit ebd0d47230fcd05d0358aabdf9d43bf21ff35b9a
Author: Michał Popek <michal@popek.co>
Date:   Sat Oct 19 17:51:41 2019 +0200

    Use tslib

commit 9fb5aac8a32413ea55b5d5563d954e680a8d4965
Author: Michał Popek <michal@popek.co>
Date:   Sun Oct 13 22:07:15 2019 +0200

    Publish

     - babel-preset-cramp@0.1.1-beta.0
     - cramp@0.1.1-beta.0
     - eslint-config-cramp@0.1.1-beta.0
     - cramp-scripts@0.1.1-beta.0

commit a2653a281035cd5e0a00c3067c42fe0f43dc133f
Author: Michał Popek <michal@popek.co>
Date:   Wed Oct 9 00:55:08 2019 +0200

    Pass emotion flag to babel preset in Jest

commit 6302f34e8e707dd00216a6fd64ff174769867277
Author: Michał Popek <michal@popek.co>
Date:   Wed Oct 9 00:21:06 2019 +0200

    Cramp

commit e435454e35faec08904a9a6b2840bc0aba2ca558
Author: Michał Popek <michal@popek.co>
Date:   Tue Oct 8 23:55:43 2019 +0200

    Change crapp versioning

commit ecbc570bb730fcd5c798fe622deac601ba0f0ca9
Author: Michał Popek <michal@popek.co>
Date:   Tue Oct 8 23:55:27 2019 +0200

    Fix compile lockfile script

commit cf5e1d444f358e081dc008767d759a0a9e195ccb
Author: Michał Popek <michal@popek.co>
Date:   Tue Oct 8 23:42:43 2019 +0200

    Change package versioning for scripts

commit 80ef5d6433cc1ce1d9a5a547cc9226e19a062c8b
Author: Michał Popek <michal@popek.co>
Date:   Mon Oct 7 23:42:40 2019 +0200

    Handle Emotion usage when ejecting

--- a/packages/create-react-app/package.json
+++ b/packages/create-react-app/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "create-react-app",
-  "version": "3.2.0",
+  "name": "cramp",
+  "version": "0.1.1",
   "keywords": [
     "react"
   ],
   "description": "Create React apps with no build configuration.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/facebook/create-react-app.git",
+    "url": "https://github.com/michalpopek/cramp.git",
     "directory": "packages/create-react-app"
   },
   "license": "MIT",
@@ -15,7 +15,7 @@
     "node": ">=8"
   },
   "bugs": {
-    "url": "https://github.com/facebook/create-react-app/issues"
+    "url": "https://github.com/michalpopek/cramp/issues"
   },
   "files": [
     "index.js",
@@ -23,7 +23,7 @@
     "yarn.lock.cached"
   ],
   "bin": {
-    "create-react-app": "./index.js"
+    "cramp": "./index.js"
   },
   "dependencies": {
     "chalk": "2.4.2",
